[package]
name = "user-management"
version = "0.1.0"
authors = ["Rodrigo Oliveira <rodrigo.oliveira@secretescapes.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.8.3"
actix-web = "1.0.2"
diesel = { version = "1.4.2", features = ["postgres"] }
dotenv = "0.9.0"
